--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "📓 Amethyst",
-  "short_name": "📓 Amethyst",
-  "start_url": "/",
-  "scope": "/",
+  "name": "🌱 My Digital Garden",
+  "short_name": "🌱 My Digital Garden",
+  "start_url": "/amethyst/",
+  "scope": "/amethyst/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/amethyst/favicon.png",
       "sizes": "1024x1024"
     }
   ]
