--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "🌱 Digital Garden",
-  "short_name": "🌱 Digital Garden",
+  "name": "🌱 My Digital Garden",
+  "short_name": "🌱 My Digital Garden",
   "start_url": "/amethyst/",
   "scope": "/amethyst/",
   "display": "standalone",
